@@ -158,9 +158,8 @@ public class DBApp {
 
         ArrayList<ArrayList<Tuple>> res = new ArrayList<>();
         int j = 0;
-
+        String prev=null;
         for (SQLTerm sqlTerm : arrSQLTerms) {
-
             String columnName = sqlTerm._strColumnName;
             Object value = sqlTerm._objValue;
             String tableName = sqlTerm._strTableName;
@@ -185,11 +184,11 @@ public class DBApp {
                     switch (operator) {
                         case "=":
                             references = ind.search((Comparable) value);
+                            for (int i = 0; i < references.size(); i++) {
                             pagename = references.get(0).getPage();
                             pagenow = Page.deserialize(pagename);
-                            for (int i = 0; i < references.size(); i++) {
-                                indexInPage = references.get(i).getIndexInPage();
-                                helper.add(pagenow.tuples.get(indexInPage));
+                            indexInPage = references.get(i).getIndexInPage();
+                            helper.add(pagenow.tuples.get(indexInPage));
                             }
                             res.add(helper);
                             break;
@@ -242,6 +241,10 @@ public class DBApp {
                 throw new DBAppException("Table " + tableName + " not found.");
             }
             if (res.size() > 1) {
+                if(!prev.equals(tableName) && prev !=null){
+                    throw new DBAppException("Engine is not supporting joins");
+                }
+                prev =tableName;
                 ArrayList<Tuple> l1 = res.remove(0);//check valid datatype
                 ArrayList<Tuple> l2 = res.remove(0);
                 ArrayList<Tuple> anding = new ArrayList<>(l1);
@@ -278,86 +281,86 @@ public class DBApp {
         String strTableName = "Student";
 
         // Table Creation
-        Hashtable htblColNameType = new Hashtable();
-        htblColNameType.put("id", "java.lang.Integer");
-        htblColNameType.put("name", "java.lang.String");
-        htblColNameType.put("gpa", "java.lang.double");
-        htblColNameType.put("numCourses", "java.lang.Integer");
-        dbApp.createTable(strTableName, "id", htblColNameType);
+//        Hashtable htblColNameType = new Hashtable();
+//        htblColNameType.put("id", "java.lang.Integer");
+//        htblColNameType.put("name", "java.lang.String");
+//        htblColNameType.put("gpa", "java.lang.double");
+//        htblColNameType.put("numCourses", "java.lang.Integer");
+//        dbApp.createTable(strTableName, "id", htblColNameType);
+////
+////
+//        Hashtable htblColNameValue = new Hashtable();
+//
+//        // inserting 78452, zaky noor, 0.88
+//        htblColNameValue.put("id", Integer.valueOf(1));
+//        htblColNameValue.put("name", "Amir Eid");
+//        htblColNameValue.put("gpa", new Double(0.7));
+//        htblColNameValue.put("numCourses", Integer.valueOf(300050));
+//        dbApp.insertIntoTable(strTableName, htblColNameValue);
 //
 //
-        Hashtable htblColNameValue = new Hashtable();
-
-        // inserting 78452, zaky noor, 0.88
-        htblColNameValue.put("id", Integer.valueOf(1));
-        htblColNameValue.put("name", "Amir Eid");
-        htblColNameValue.put("gpa", new Double(0.7));
-        htblColNameValue.put("numCourses", Integer.valueOf(300050));
-        dbApp.insertIntoTable(strTableName, htblColNameValue);
-
-
-        // inserting: 5674567, dalia noor, 1.25
-        htblColNameValue.clear();
-        htblColNameValue.put("id", Integer.valueOf(2));
-        htblColNameValue.put("name", "Dalia Noor");
-        htblColNameValue.put("gpa", new Double(1.25));
-        htblColNameValue.put("numCourses", Integer.valueOf(60));
-        dbApp.insertIntoTable(strTableName, htblColNameValue);
+//        // inserting: 5674567, dalia noor, 1.25
+//        htblColNameValue.clear();
+//        htblColNameValue.put("id", Integer.valueOf(2));
+//        htblColNameValue.put("name", "Dalia Noor");
+//        htblColNameValue.put("gpa", new Double(1.25));
+//        htblColNameValue.put("numCourses", Integer.valueOf(60));
+//        dbApp.insertIntoTable(strTableName, htblColNameValue);
+////
+////
+//        // inserting 23498, john noor, 1.5
+//        htblColNameValue.clear();
+//        htblColNameValue.put("id", Integer.valueOf(3));
+//        htblColNameValue.put("name", "John Noor");
+//        htblColNameValue.put("gpa", new Double(1.5));
+//        htblColNameValue.put("numCourses", Integer.valueOf(90));
+//        dbApp.insertIntoTable(strTableName, htblColNameValue);
+////
+//        // inserting 78452, zaky noor, 0.88
+//        htblColNameValue.clear();
+//        htblColNameValue.put("id", Integer.valueOf(4));
+//        htblColNameValue.put("name", "Zaky Noor");
+//        htblColNameValue.put("gpa", new Double(0.88));
+//        htblColNameValue.put("numCourses", Integer.valueOf(300));
+//        dbApp.insertIntoTable(strTableName, htblColNameValue);
+//
+//        // inserting 78452, zaky noor, 0.88
+//        htblColNameValue.clear();
+//        htblColNameValue.put("id", Integer.valueOf(5));
+//        htblColNameValue.put("name", "Zaky Noor");
+//        htblColNameValue.put("gpa", new Double(0.88));
+//        htblColNameValue.put("numCourses", Integer.valueOf(300));
+//        dbApp.insertIntoTable(strTableName, htblColNameValue);
 //
 //
-        // inserting 23498, john noor, 1.5
-        htblColNameValue.clear();
-        htblColNameValue.put("id", Integer.valueOf(3));
-        htblColNameValue.put("name", "John Noor");
-        htblColNameValue.put("gpa", new Double(1.5));
-        htblColNameValue.put("numCourses", Integer.valueOf(90));
-        dbApp.insertIntoTable(strTableName, htblColNameValue);
+//        // inserting 78452, zaky noor, 0.88
+//        htblColNameValue.clear();
+//        htblColNameValue.put("id", Integer.valueOf(6));
+//        htblColNameValue.put("name", "Ahmed Zaky");
+//        htblColNameValue.put("gpa", new Double(0.88));
+//        htblColNameValue.put("numCourses", Integer.valueOf(300));
+//        dbApp.insertIntoTable(strTableName, htblColNameValue);
 //
-        // inserting 78452, zaky noor, 0.88
-        htblColNameValue.clear();
-        htblColNameValue.put("id", Integer.valueOf(4));
-        htblColNameValue.put("name", "Zaky Noor");
-        htblColNameValue.put("gpa", new Double(0.88));
-        htblColNameValue.put("numCourses", Integer.valueOf(300));
-        dbApp.insertIntoTable(strTableName, htblColNameValue);
-
-        // inserting 78452, zaky noor, 0.88
-        htblColNameValue.clear();
-        htblColNameValue.put("id", Integer.valueOf(5));
-        htblColNameValue.put("name", "Zaky Noor");
-        htblColNameValue.put("gpa", new Double(0.88));
-        htblColNameValue.put("numCourses", Integer.valueOf(300));
-        dbApp.insertIntoTable(strTableName, htblColNameValue);
-
-
-        // inserting 78452, zaky noor, 0.88
-        htblColNameValue.clear();
-        htblColNameValue.put("id", Integer.valueOf(6));
-        htblColNameValue.put("name", "Ahmed Zaky");
-        htblColNameValue.put("gpa", new Double(0.88));
-        htblColNameValue.put("numCourses", Integer.valueOf(300));
-        dbApp.insertIntoTable(strTableName, htblColNameValue);
-
-
-        // inserting 78452, zaky noor, 0.88
-        htblColNameValue.clear();
-        htblColNameValue.put("id", Integer.valueOf(7));
-        htblColNameValue.put("name", "Fathy Sroor");
-        htblColNameValue.put("gpa", new Double(0.88));
-        htblColNameValue.put("numCourses", Integer.valueOf(300));
-        dbApp.insertIntoTable(strTableName, htblColNameValue);
-
-        // inserting: 25, ahmed noor, 0.95
-        htblColNameValue.clear();
-        htblColNameValue.put("id", Integer.valueOf(25));
-        htblColNameValue.put("name", "Ahmed Noor");
-        htblColNameValue.put("gpa", new Double(0.95));
-        htblColNameValue.put("numCourses", Integer.valueOf(50));
-        dbApp.insertIntoTable(strTableName, htblColNameValue);
-
-
-        dbApp.createIndex(strTableName, "gpa", "gpaIndex");
-        dbApp.createIndex(strTableName, "name", "nameIndex");
+//
+//        // inserting 78452, zaky noor, 0.88
+//        htblColNameValue.clear();
+//        htblColNameValue.put("id", Integer.valueOf(7));
+//        htblColNameValue.put("name", "Fathy Sroor");
+//        htblColNameValue.put("gpa", new Double(0.88));
+//        htblColNameValue.put("numCourses", Integer.valueOf(300));
+//        dbApp.insertIntoTable(strTableName, htblColNameValue);
+//
+//        // inserting: 25, ahmed noor, 0.95
+//        htblColNameValue.clear();
+//        htblColNameValue.put("id", Integer.valueOf(25));
+//        htblColNameValue.put("name", "Ahmed Noor");
+//        htblColNameValue.put("gpa", new Double(0.95));
+//        htblColNameValue.put("numCourses", Integer.valueOf(50));
+//        dbApp.insertIntoTable(strTableName, htblColNameValue);
+//
+//
+//        dbApp.createIndex(strTableName, "gpa", "gpaIndex");
+//        dbApp.createIndex(strTableName, "name", "nameIndex");
 
 //			 Attempting to re-create the same table -> should throw an exception yay
 //			Hashtable htblColNameType = new Hashtable();
@@ -384,54 +387,55 @@ public class DBApp {
 //        dbApp.updateTable(strTableName, "25", ht);
 
         // Tests calling updateTable on a Double, Integer, String Cols
-        Hashtable<String, Object> ht = new Hashtable<>();
-        ht.put("name", "Amir Eidd");
-        ht.put("gpa", 0.8);
-        ht.put("numCourses", 1300);
-        dbApp.updateTable(strTableName, "1", ht);
-
-        // Tests calling updateTable on a String Col
-        ht.clear();
-        ht.put("name", "Zeyaddd");
-        dbApp.updateTable(strTableName, "2", ht);
-
-        // Tests calling updateTable on a DOUBLE Col
-        ht.clear();
-        ht.put("gpa", 2.8);
-        dbApp.updateTable(strTableName, "4", ht);
-
-        // Tests calling updateTable on many pages
-        ht.clear();
-        ht.put("numCourses", 2);
-        dbApp.updateTable(strTableName, "5", ht);
-
-        // Tests calling updateTable on an empty htbl
-        ht.clear();
-        dbApp.updateTable(strTableName, "7", ht);
-        ht.put("numCourses", 2);
-        dbApp.updateTable(strTableName, "7", ht);
-
-        System.out.println("After: " + currentTable);
-
+//        Hashtable<String, Object> ht = new Hashtable<>();
+//        ht.put("name", "Amir Eidd");
+//        ht.put("gpa", 0.8);
+//        ht.put("numCourses", 1300);
+//        dbApp.updateTable(strTableName, "1", ht);
+//
+//        // Tests calling updateTable on a String Col
+//        ht.clear();
+//        ht.put("name", "Zeyaddd");
+//        dbApp.updateTable(strTableName, "2", ht);
+//
+//        // Tests calling updateTable on a DOUBLE Col
+//        ht.clear();
+//        ht.put("gpa", 2.8);
+//        dbApp.updateTable(strTableName, "4", ht);
+//
+//        // Tests calling updateTable on many pages
+//        ht.clear();
+//        ht.put("numCourses", 2);
+//        dbApp.updateTable(strTableName, "5", ht);
+//
+//        // Tests calling updateTable on an empty htbl
+//        ht.clear();
+//        dbApp.updateTable(strTableName, "7", ht);
+//        ht.put("numCourses", 2);
+//        dbApp.updateTable(strTableName, "7", ht);
+//
+//        System.out.println("After: " + currentTable);
+//
 
 //			System.out.println("After Update: \n" + Page.deserialize(Table.deserialize(strTableName).tablePages.get(0)));
 
-//
-//			SQLTerm[] arrSQLTerms;
-//			arrSQLTerms = new SQLTerm[1];
-//			arrSQLTerms[0] = new SQLTerm("Student", "name", "<=", "Dalia Noor");
-////			arrSQLTerms[1] = new SQLTerm();
-////			arrSQLTerms[1]._strTableName =  "Student";
-////			arrSQLTerms[1]._strColumnName=  "gpa";
-////			arrSQLTerms[1]._strOperator  =  "=";
-////			arrSQLTerms[1]._objValue     =  new Double( 7 );
-//
-//			String[]strarrOperators = new String[0];
-////			strarrOperators[0] = "OR";
-//			// select * from Student where name = "John Noor" or gpa = 1.5;
-//			Iterator resultSet = dbApp.selectFromTable(arrSQLTerms , strarrOperators);
-//			while(resultSet.hasNext())
-//				System.out.println(resultSet.next());
+
+			SQLTerm[] arrSQLTerms;
+			arrSQLTerms = new SQLTerm[1];
+			arrSQLTerms[0] = new SQLTerm("Student", "name", "<=", "Dalia Noor");
+//			arrSQLTerms[1] = new SQLTerm();
+//			arrSQLTerms[1]._strTableName =  "Student";
+//			arrSQLTerms[1]._strColumnName=  "gpa";
+//			arrSQLTerms[1]._strOperator  =  "=";
+//			arrSQLTerms[1]._objValue     =  new Double( 7 );
+
+			String[]strarrOperators = new String[0];
+//			strarrOperators[0] = "OR";
+			// select * from Student where name = "John Noor" or gpa = 1.5;
+        Iterator resultSet = dbApp.selectFromTable(arrSQLTerms , strarrOperators);
+        System.out.println("select output");
+        while(resultSet.hasNext())
+            System.out.println(resultSet.next());
 
     }
 
